Fix local host backuping bug
Delete host name from rsync command line.
Delete colons from directories list in rsbu.conf.
Host name and colons in rsync command line caused ssh:...Connection
refused error for local host backuping.

--- a/rsbu.conf
+++ b/rsbu.conf
@@ -37,6 +37,8 @@ DeviceName[2]="4TB Seagate external USB HDD"
 # The pattern of these lines is as follows:                                    #
 # hostname;excludes;list of directories to back up                             #
 # Numbering must be sequential as this creates an array used by rsbu.          #
+# Local host list of directories to back up must be without colons             #
+# The pattern for local host see below (Backup [9]))                           #
 ################################################################################
 
 Backup[1]="david;--exclude .gvfs --exclude Cache --exclude yumdb;:/root :/etc :/home :/usr/local :/var/spool/cron :/Virtual :/stuff"
@@ -46,5 +48,9 @@ Backup[4]="wally1;--exclude Cache --exclude yumdb --exclude /var/log --exclude .
 Backup[5]="wally2;--exclude Cache --exclude yumdb --exclude /var/log --exclude .gvfs;:/root :/etc :/home :/var :/usr/local"
 Backup[6]="voyager;--exclude Cache --exclude yumdb --exclude .gvfs;:/root :/etc :/home :/var :/usr/local"
 Backup[7]="hornet;--exclude Cache --exclude yumdb --exclude /var/log;:/root :/etc :/home :/var :/usr/local"
+
 # The following definition is for test purposes
 # Backup[8]="enterprise;--exclude .gvfs --exclude /var/log;:/root :/etc :/home :/usr/local :/var"
+
+# The following definition is for local host only
+# Backup[9]="LOCALHOST;--exclude .cache --exclude .gvfs;/home/username"
